--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ section {
     height: 100%;
     object-fit: cover;
     transition: all 0.3s ease;
+    border-radius: 10px;
 }
 
 .project:hover img {
